--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^9.3.10",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/cookie-session": "^2.0.44",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-session": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sqlite3": "^5.1.6",
